# SF3KUtils

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
FednetCmp/: CMakeLists.txt  FNCIconbar.c  FNCIconbar.h  FNCInit.c  FNCInit.h  FNCMenu.c  FNCMenu.h  FNCSaveBox.c  FNCSaveBox.h  GMakefile  Main.c  MakeCommon  Makefile  Makefile.sdcc  OurEvents.h  ParseArgs.c  ParseArgs.h  PreQuit.c  PreQuit.h  SaveComp.c  SaveComp.h  SaveDir.c  SaveDir.h  SaveFile.c  SaveFile.h  Scan.c  Scan.h  Tests.c  Utils.c  Utils.h  stdlib.h
FednetCmp/tests/: CMakeLists.txt  Tests.c
SFColours/: CMakeLists.txt  ColMap.c  ColMap.h  ColsIO.c  ColsIO.h  DCS_dialogue.c  DCS_dialogue.h  EditWin.c  EditWin.h  Editor.c  Editor.h  ExpColFile.c  ExpColFile.h  GMakefile  Main.c  Main.h  MakeCommon  Makefile  Makefile.sdcc  Menus.c  Menus.h  OurEvents.h  Picker.c  Picker.h  PreQuit.c  PreQuit.h  SFCFileInfo.c  SFCFileInfo.h  SFCIconbar.c  SFCIconbar.h  SFCInit.c  SFCInit.h  SFCSaveBox.c  SFCSaveBox.h  Utils.c  Utils.h
SFColours/tests/: AppTest.c  CMakeLists.txt  ColmapTest.c  EditorTest.c  GMakefile  Main.c  MakeCommon  NMakefile  Tests.h
SFSkyEdit/: CMakeLists.txt  DCS_dialogue.c  DCS_dialogue.h  EditWin.c  EditWin.h  Editor.c  Editor.h  Export.c  Export.h  GMakefile  Goto.c  Goto.h  Insert.c  Insert.h  Interpolate.c  Interpolate.h  Layout.c  Layout.h  Main.c  Main.h  MakeCommon  Makefile  Menus.c  Menus.h  OptsMenu.c  OptsMenu.h  OurEvents.h  ParseArgs.c  ParseArgs.h  Picker.c  Picker.h  PreQuit.c  PreQuit.h  PrevUMenu.c  PrevUMenu.h  Preview.c  Preview.h  Render.h  Render.s  SFSFileInfo.c  (+17 more)
SFSkyEdit/tests/: AppTest.c  CMakeLists.txt  EditorTest.c  GMakefile  Main.c  MakeCommon  NMakefile  SkyTest.c  Tests.h
SFToSpr/: CMakeLists.txt  DeclErrors.h  GMakefile  Main.c  MakeCommon  Makefile  Makefile.clang  OurEvents.h  ParseArgs.c  ParseArgs.h  PreQuit.c  PreQuit.h  QuickView.c  QuickView.h  SFError.h  SFTIconbar.c  SFTIconbar.h  SFTInit.c  SFTInit.h  SFTMenu.c  SFTMenu.h  SFTSaveBox.c  SFTSaveBox.h  SFgfxconv.c  SFgfxconv.h  SaveDir.c  SaveDir.h  SaveMapTiles.c  SaveMapTiles.h  SavePlanets.c  SavePlanets.h  SaveSky.c  SaveSky.h  SaveSprites.c  SaveSprites.h  Scan.c  Scan.h  Tests.c  Utils.c  Utils.h
SFToSpr/tests/: CMakeLists.txt  Tests.c
